src/objects/Address__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address_Email__c</fullName>
        <label>Address Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Address_Fax__c</fullName>
        <label>Address Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Address_Phone_1__c</fullName>
        <label>Address Phone 1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Address_Phone_2__c</fullName>
        <label>Address Phone 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Addressee__c</fullName>
        <label>Addressee</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Use Address for Billing</description>
        <label>Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>The City in which the member resides</description>
        <inlineHelpText>The City in which the member resides</inlineHelpText>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Type_1__c</fullName>
        <label>Contact Type 1</label>
        <picklist>
            <picklistValues>
                <fullName>Cell</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_Type_2__c</fullName>
        <label>Contact Type 2</label>
        <picklist>
            <picklistValues>
                <fullName>Cell</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_Value_1__c</fullName>
        <label>Contact Value 1</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Value_2__c</fullName>
        <label>Contact Value 2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copied_From_Dependent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Copied From Dependent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Correspondence__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Correspondence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Select country of which address belongs</description>
        <inlineHelpText>Select country of which address belongs</inlineHelpText>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>United States</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bouvet Island</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Capture_Company__c</fullName>
        <label>Credit Card Capture Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Capture_Email__c</fullName>
        <label>Credit Card Capture Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Capture_Phone__c</fullName>
        <label>Credit Card Capture Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Current_Days_Remaining__c</fullName>
        <formula>DATEVALUE(TEXT(YEAR(Today())) + &quot;-12-31&quot;)- TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Days Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the link to the Customer that resides at this address.</description>
        <inlineHelpText>This is the link to the Customer that resides at this address.</inlineHelpText>
        <label>Customer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Addresses</relationshipLabel>
        <relationshipName>Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Text field provided to tell users how member uses the address. (i.e Summer Home)</description>
        <inlineHelpText>Text field provided to tell users how member uses the address. (i.e Summer Home)</inlineHelpText>
        <label>Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Date__c</fullName>
        <description>This is the start date that the member uses this address.</description>
        <inlineHelpText>This is the start date that the member uses this address.</inlineHelpText>
        <label>From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>From_Days_Remaining__c</fullName>
        <formula>DATEVALUE(TEXT(YEAR(From_Date__c)) + &quot;-12-31&quot;) - From_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>From Days Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Institution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the institution the member belongs to.</description>
        <inlineHelpText>This is the institution the member belongs to.</inlineHelpText>
        <label>Institution</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Addresses</relationshipLabel>
        <relationshipName>Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legacy_Id__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MonthDayActive__c</fullName>
        <formula>IF(
  IF(To_Days_Remaining__c &gt; From_Days_Remaining__c,
    OR(Current_Days_Remaining__c &lt;= From_Days_Remaining__c, Current_Days_Remaining__c &gt;= To_Days_Remaining__c),
    IF(To_Days_Remaining__c &lt; From_Days_Remaining__c,
      AND(From_Days_Remaining__c &gt;= Current_Days_Remaining__c, Current_Days_Remaining__c&gt;=To_Days_Remaining__c
      ),
      IF(To_Days_Remaining__c = From_Days_Remaining__c,
        AND(From_Days_Remaining__c = Current_Days_Remaining__c
        ),false
      )
    )
),
true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>This is a filed that can name the address to distinguish between multiple addresses for the Member or Guest.</description>
        <inlineHelpText>This is a filed that can name the address to distinguish between multiple addresses for the Member or Guest.</inlineHelpText>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Newsletter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Addressed used to mail Newsletter</description>
        <label>Newsletter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Roster__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Use Address for Member Roster</description>
        <label>Roster</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <description>This field is the State or Province of the address.</description>
        <inlineHelpText>This field is the State or Province of the address.</inlineHelpText>
        <label>State/Province</label>
        <picklist>
            <picklistValues>
                <fullName>AB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Statements__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Statements</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Street_1__c</fullName>
        <description>This field is the first line of the street address. Use for single line street addresses or multiple line street addresses.</description>
        <inlineHelpText>This field is the first line of the street address. Use for single line street addresses or multiple line street addresses.</inlineHelpText>
        <label>Street 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_2__c</fullName>
        <description>This field is the first line of the street address. Use for multiple line street addresses as needed.</description>
        <inlineHelpText>This field is the first line of the street address. Use for multiple line street addresses as needed.</inlineHelpText>
        <label>Street 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_3__c</fullName>
        <description>This field is the first line of the street address. Use for multiple line street addresses as needed.</description>
        <inlineHelpText>This field is the first line of the street address. Use for multiple line street addresses as needed.</inlineHelpText>
        <label>Street 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Date__c</fullName>
        <description>This is the end date of the date range the Member or Guest uses this address.</description>
        <inlineHelpText>This is the end date of the date range the Member or Guest uses this address.</inlineHelpText>
        <label>To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>To_Days_Remaining__c</fullName>
        <formula>DATEVALUE(TEXT(YEAR(To_Date__c)) + &quot;-12-31&quot;) - To_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>To Days Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>This field is a pick list used to designate the address as Home, Work, or Other type.</description>
        <inlineHelpText>This field is a pick list used to designate the address as Home, Work, or Other type.</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Home</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Winter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Summer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vacation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zip_Postal_Code__c</fullName>
        <description>This field is for the Zip Code or Postal Code for the address.</description>
        <inlineHelpText>This field is for the Zip Code or Postal Code for the address.</inlineHelpText>
        <label>Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Address</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Customer__c</columns>
        <columns>Country__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Address Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>